[package]
name = "engine-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The EXECUTE half of the engine fleet: deserialize a compiled `cwasm`,
# instantiate it, and drive ONE pure-reducer round through the bindgen host
# world (session-context, embedded resolvers, media blobs). This crate
# runs the UNTRUSTED policy wasm and carries NO Cranelift — its wasmtime is
# RUNTIME-only, so the execution-worker CVM has zero compiler surface. It
# shares only the plain-data engine-types leaf with engine-compiler; a
# serialized `cwasm` (produced there) is the sole input crossing in.
[dependencies]
engine-types = { path = "../engine-types" }
hatch-client = { path = "../hatch-client" }

# RUNTIME only — NO `cranelift`. `Component::deserialize` + instantiate +
# run need the runtime; codegen (`Component::new`) lives in engine-compiler.
# Same non-cranelift feature set otherwise so the `Config` (engine_config)
# matches the compiler's and a compiler-produced cwasm loads here.
wasmtime = { version = "46", default-features = false, features = [
    "component-model",
    "runtime",
    "std",
    "async",
] }

# Content-addresses each captured frame (`convert::event_to_wit`) so the
# blob store keys blobs by BLAKE3 hash.
blake3 = "1"

# --- execution-worker bin deps (optional) — pulled ONLY by the `worker`
# feature, so the LIB stays rpc/remoc-free. The worker BIN is the deployable
# execution-worker CVM: it wraps this crate's Executor in an
# `engine_rpc::ExecutorService` server, caches deserialized components per composition,
# and proxies mid-run callbacks (media_load / session_change) back to the
# orchestrator over the SAME remoc connection — KEYLESS (no tee_seal_key ever
# crosses in). ---
engine-rpc = { path = "../engine-rpc", default-features = false, features = ["execute"], optional = true }
# Shared disposable-child process-isolation plumbing (spawn + concurrency bound +
# round deadline + reap); the compile-worker rides the same crate.
engine-supervisor = { path = "../engine-supervisor", optional = true }
remoc = { version = "0.18", default-features = false, features = [
    "rtc",
    "codec-ciborium",
], optional = true }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    # `process` — the supervisor spawns per-round `session-child` processes;
    # `sync` — the bounded-children `Semaphore`; `time` — the child-reap timeout.
    "process",
    "sync",
    "time",
], optional = true }
# Bounded per-composition L1 (same idiom as the orchestrator's L1 PolicyCache:
# max_capacity + time_to_idle), now holding the cwasm memfd + registry metadata.
moka = { version = "0.12", features = ["future"], optional = true }

# Zeroize the transient wire `cwasm` `Vec` (possible embedded model weights) on
# drop — the one plaintext copy we own before it is written into the memfd. (The
# long-lived memfd is NOT scrubbed: it's legitimately cache-resident and SEV-SNP
# blinds the host; scrubbing key material via `secrecy` is where zeroize pays.)
zeroize = { version = "1", optional = true }

# The supervisor materializes each composition's `cwasm` as an anonymous in-RAM
# file the child MMAPs by fd. On the Linux CVM that is a sealed `memfd` (RAM-backed,
# no filesystem name, write-sealed); `memfd` is already in our tree via wasmtime, so
# this direct dep adds nothing to the binary. `worker`-gated.
[target.'cfg(target_os = "linux")'.dependencies]
memfd = { version = "0.6", optional = true }

# Dev/test (macOS) fallback: an unlinked tmpfile gives the same anonymous, fd-only
# lifetime as a memfd. Never compiled for the Linux CVM.
[target.'cfg(not(target_os = "linux"))'.dependencies]
tempfile = { version = "3", optional = true }

[features]
# Enables the `execution-worker` bin. api never enables it → the api
# orchestrator links only the pure lib types it re-points to engine-types /
# hatch-client, and NO wasmtime.
worker = [
    "dep:engine-rpc",
    "dep:engine-supervisor",
    "dep:remoc",
    "dep:tokio",
    "dep:moka",
    # Platform-split cwasm backing (memfd on Linux, tmpfile in dev) — see the
    # target-specific dependency tables. `dep:` on a target-gated optional dep is
    # inert on the non-matching platform.
    "dep:memfd",
    "dep:tempfile",
    "dep:zeroize",
]

[[bin]]
name = "execution-worker"
required-features = ["worker"]

# The disposable per-round child the supervisor spawns. Same crate (same build →
# same wasmtime ABI / compat_token as the supervisor), `worker`-gated so api never
# links it. Untrusted policy wasm + `Component::deserialize` run ONLY here.
[[bin]]
name = "session-child"
required-features = ["worker"]

# Micro-bench isolating the `spawn` phase (exec + dyld + Engine::new + handshake)
# — the fork-zygote's only target. No fixtures/Cranelift, so it builds fast in a
# Linux container to answer the Stage-B gate.
[[bin]]
name = "spawn-bench"
required-features = ["worker"]

[dev-dependencies]
# `process`/`net`/`io-util`/`time` — the worker-gated `child_process` integration
# test spawns the real `session-child` binary over a socketpair and drives it.
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "net",
    "io-util",
    "time",
] }
# happy_path.rs is the end-to-end integration test: it COMPOSES a policy +
# plugins (engine-compiler), round-trips the cwasm onto this crate's engine,
# and drives full reducer rounds against real fixtures.
engine-compiler = { path = "../engine-compiler" }
# Reads the fixture's source-side disclosure-fields.json / i18n.json via the
# same helpers the CLI uses at seal time.
enclavid-embedded = { path = "../embedded" }
# fake_capture emits a real JPEG so the face-age plugin's in-sandbox
# decode → preprocess → inference pipeline has something to decode.
jpeg-encoder = "0.6"
# Shared build→componentize→embed pipeline — the SAME code `xtask
# push-plugins` uses, so tested and shipped artifacts match.
xtask = { path = "../../xtask" }
