[package]
name = "engine-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The intra-fleet RPC contract, split under two features so a single-role
# worker links only its half. A compile-worker builds
# `--no-default-features --features compile` (no executor contract, no
# hatch-client); an execution-worker uses `execute` (no compiler contract,
# no engine-types). `default` enables both so whole-workspace dev builds
# compile + test the whole contract; per-CVM artifact builds narrow it.
[features]
default = ["compile", "execute"]
# Both features pull engine-types: compile for PluginInstance, execute for the
# composition catalogs (ComponentDecls / EmbeddedImport) it rebuilds the
# embedded registry from at run time. The shared `CompiledBundle` needs it under
# either. Neither pulls Cranelift.
compile = ["dep:engine-types", "dep:remoc"]
execute = ["dep:engine-types", "dep:hatch-client", "dep:remoc"]

[dependencies]
serde = { version = "1", features = ["derive"] }
# Encode large byte fields (the ~7-15 MiB `cwasm`) as a CBOR BYTE STRING, not a
# serde sequence — ciborium serializes `Vec<u8>` element-by-element otherwise,
# ballooning the wire form + costing ~hundreds of ms per bundle transfer.
serde_bytes = "0.11"
# remoc = remote trait calls (rtc) over any AsyncRead+AsyncWrite, CBOR codec
# (ciborium — same as hatch-protocol), no OpenTelemetry. Optional: only the
# rtc traits need it, so a features-less build is remoc-free. See
# project_fleet_rpc_substrate.
remoc = { version = "0.18", default-features = false, features = [
    "rtc",
    "codec-ciborium",
], optional = true }
# Compile-side wire types (EmbeddedImport, ComponentDecls, PluginInstance).
engine-types = { path = "../engine-types", optional = true }
# Execute-side wire types (Event, SessionState).
hatch-client = { path = "../hatch-client", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread"] }
# Round-trip test encodes a sample bundle directly (independent of remoc's codec).
ciborium = "0.2"
