[package]
name = "enclavid-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
broker-client = { path = "../broker-client" }
enclavid-embedded = { path = "../embedded" }
# Leaf domain types (limits, embedded registry/decls, composition) hoisted
# out of this crate so the wasmtime-free halves of the fleet (rpc contract,
# client-only orchestrator) can name them. Re-exported below at their
# original engine paths, so callers see no change.
engine-types = { path = "../engine-types" }

# Used by `runner::decls::load_embedded` to pull the embedded custom
# sections (disclosure-fields, i18n) straight out of a compiled policy
# component without having to round-trip through wasmtime instantiation.
wasmparser = "0.247"

# Single-store composition: `runner::compose` fuses a policy with its
# pinned plugins into ONE component (one wasmtime Store ⇒ native
# cross-component resources) via wac's `plug`. wac 0.10 emits
# wasm-tools 0.247 encoding, which wasmtime 46 loads.
wac-graph = "0.10"

wasmtime = { version = "46", default-features = false, features = [
    "cranelift",
    "component-model",
    "runtime",
    "std",
    "async",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
blake3 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wit-component = "0.247"
# Builds synthetic (nested) components in embedded_nested.rs to exercise
# `load_embedded_nested`'s recursion without cargo-building fixtures.
wasm-encoder = "0.247"
# happy_path test reads the test-policy's source-side
# disclosure-fields.json / i18n.json via the same helpers the CLI uses
# at seal time; keeps the fixture's text-ref set in sync with what
# would land in the embedded sections of a sealed wasm.
enclavid-embedded = { path = "../embedded" }
# happy_path's fake_capture emits a real JPEG so the face-age plugin's
# in-sandbox decode → preprocess → inference pipeline has something to
# decode (a placeholder clip of raw bytes wouldn't).
jpeg-encoder = "0.6"
# Shared build→componentize→embed pipeline — the SAME code the
# `xtask push-plugins` publish tool uses, so tested and shipped artifacts
# match. (build helpers only; xtask does not depend on the engine.)
xtask = { path = "../../xtask" }
