[package]
name = "enclavid-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Thin FACADE over the split engine fleet. Re-exports engine-compiler
# (compile: fuse + Cranelift) and engine-executor (execute: deserialize +
# run) at the original `enclavid_engine::*` paths, and offers a `Runner`
# convenience that drives BOTH halves in-process on ONE shared wasmtime
# engine (local / dev / single-CVM). In Plan-A the api orchestrator drops
# this facade entirely — it talks to a RemoteCompiler / RemoteExecutor over
# rpc, and each worker CVM builds only its own half (the execution worker
# via engine-executor, which carries no Cranelift).
[dependencies]
engine-compiler = { path = "../engine-compiler" }
engine-executor = { path = "../engine-executor" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# happy_path / embedded_nested drive the facade against real fixtures and
# build synthetic components to exercise the run + nested-catalog paths.
wasm-encoder = "0.247"
wit-component = "0.247"
# Tests read the fixture's source-side disclosure-fields.json / i18n.json
# via the same helpers the CLI uses at seal time.
enclavid-embedded = { path = "../embedded" }
# Domain types the tests build directly (SessionState/Event/Decision, …).
broker-client = { path = "../broker-client" }
# fake_capture emits a real JPEG so the face-age plugin's in-sandbox
# decode → preprocess → inference pipeline has something to decode.
jpeg-encoder = "0.6"
# Shared build→componentize→embed pipeline — the SAME code `xtask
# push-plugins` uses, so tested and shipped artifacts match.
xtask = { path = "../../xtask" }
