[package]
name = "hatch-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default is TCP transport (works on all platforms, used for dev / CI /
# cross-provider deployment). Enable `vsock` for the attested production
# build — replaces the TCP connect with a vsock connect; no IP stack
# needed in the TEE kernel. The two are mutually exclusive.
default = []
vsock = ["dep:tokio-vsock", "dep:tower-service"]

[dependencies]
# Shared HTTP-over-vsock wire DTOs (CBOR-encoded).
hatch-protocol = { path = "../hatch-protocol" }
# Serde + CBOR for the sealed domain types (see src/domain.rs). Same
# codec as the wire envelope — zero protobuf in the project.
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
# Hex encoding of the identity-hiding L2 cache blob name (HKDF label).
hex = "0.4"
# Crypto primitives (symmetric AEAD session seals + age recipient seals)
# live in their own leaf crate.
enclavid-crypto = { path = "../crypto" }
# Pooled HTTP/1.1 client (hyper-util `legacy::Client`) with a cfg-split
# connector: built-in `HttpConnector` for TCP (dev), a custom vsock
# connector for the attested build. Same client type both ways; only
# the connector differs. Connection reuse comes free from the pool.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["net", "rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7", optional = true }
# `tower_service::Service<Uri>` impl for the vsock connector.
tower-service = { version = "0.3", optional = true }
