[package]
name = "hatch-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
# CBOR wire codec for the HTTP-over-vsock envelope. Chosen over bincode
# for schema evolution: named fields tolerate add/remove/reorder, so an
# independently-deployed hatch and hatch-client (host binary vs CVM
# image) survive version skew. Native byte handling (no base64 bloat on
# multi-MB OCI layers); payloads are sealed ciphertext, so human-
# readability buys nothing. Confined to `encode`/`decode` — one place.
ciborium = "0.2"
