[package]
name = "enclavid-ra-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Intra-fleet mutual RA-TLS (orchestrator <-> compile/execution workers). Each side
# mints an EPHEMERAL self-signed TLS cert whose SubjectPublicKeyInfo is bound into an
# attestation quote carried in a custom X.509 extension; the rustls handshake verifies
# the peer's quote DURING the handshake (custom verifier), so a valid TLS session
# proves the peer runs the pinned measurement and owns the TLS key — no CA, no KMS.
#
# The attestation backend is feature-gated via `enclavid-attestation`: `mock`/`snp-dev`
# run the FULL RA-TLS path on a dev box with no SEV-SNP hardware (the dev-bypass), while
# `sev-snp` (prod) COMPILE-TIME excludes the dev backends so no bypass ships to prod.
[dependencies]
enclavid-attestation = { path = "../attestation", default-features = false }

# Pin the ring crypto provider (lighter than aws-lc, builds anywhere) on both rustls
# and tokio-rustls so we never drag aws-lc-sys into the TEE binary.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pki-types = "1"

# Mint the ephemeral self-signed cert + embed the quote in a custom extension.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# Parse the peer's leaf cert on verify: pull our extension + the SPKI DER.
x509-parser = "0.16"

# CBOR-encode the `Quote` into the cert extension (project is CBOR-native).
ciborium = "0.2"

[features]
# Dev default: software-mock Ed25519 attestation — runs the full RA-TLS path with no
# SEV-SNP hardware. This is the dev-bypass.
default = ["mock"]
mock = ["enclavid-attestation/mock"]
# Real `sev` report FORMAT signed by a test key (no hardware) — closer to prod shape.
snp-dev = ["enclavid-attestation/snp-dev"]
# Prod SEV-SNP backend — compile-time EXCLUDES the dev backends above.
sev-snp = ["enclavid-attestation/sev-snp"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
