[package]
name = "runtime-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Intra-fleet RPC substrate. remoc = remote trait calls (rtc) over any
# AsyncRead+AsyncWrite (vsock relay today, RA-TLS tunnel later), CBOR codec
# (ciborium — same as broker-protocol, named-field schema evolution), no
# OpenTelemetry. Minimal features: marginal footprint over the tree is one
# runtime crate (remoc itself). See project_fleet_rpc_substrate memory.
remoc = { version = "0.18", default-features = false, features = ["rtc", "codec-ciborium"] }
serde = { version = "1", features = ["derive"] }
# Shared domain types the wire contract references — kept WASMTIME-FREE so this
# rpc contract carries no runtime. Compile types (EmbeddedImport, ComponentDecls)
# come from the engine-types leaf; execute types (Event, SessionState) from
# broker-client. Both are plain-data crates, so `CompiledBundle` / `RunRequest`
# stay typed on the wire without dragging wasmtime into the contract (or into any
# role — e.g. compile-worker — that only needs one half). See the fleet crate map.
engine-types = { path = "../engine-types" }
broker-client = { path = "../broker-client" }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread"] }
# Round-trip test encodes a sample bundle directly (independent of remoc's codec).
ciborium = "0.2"
