[package]
name = "face-age"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
# Build the real reference artifact: embeds an ONNX age model from the
# FACE_AGE_MODEL build-time path (include_bytes) and switches the profile to
# age_googlenet's format (224² BGR mean-subtracted, 8-bucket decode).
# Default (off) = placeholder graph, no model, tests green, no committed
# weights. Enable with a model present:
#   FACE_AGE_MODEL=/abs/age_googlenet.onnx cargo build --features age-googlenet ...
age-googlenet = []

[dependencies]
wit-bindgen = "0.57"
# Generic in-sandbox ML/image helpers — the plugin holds only the per-model
# profile (format + decode) + the WIT glue on top of these.
onnx-core = { path = "../onnx-core" }
vision = { path = "../vision" }

# getrandom (pulled transitively via onnx-core → tract for hashmap seeding)
# has no backend on wasm32-unknown-unknown; the `custom` feature + the
# no-op registration in lib.rs cover it. Scoped to wasm so native builds
# (unit tests) use the OS backend. Registered here (the final cdylib) so the
# symbol is present at link.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

# For native unit tests of the decode/preprocess/run pipeline: encode a real
# JPEG to feed `estimate_age` (mirrors happy_path's fake_capture).
[dev-dependencies]
jpeg-encoder = "0.6"
